src/snapshots/zeek_language_server__ast__test__for_parameters_vec-3.snap
---
source: src/ast.rs
expression: "crate::ast::resolve(&db.0, NodeLocation::from_node(uri, s))"
---
Some(
    Decl {
        module: None,
        id: u!("s"),
        fqid: u!("s"),
        kind: Index(
            Loop(
                0,
            ),
            u!("set(1, 2, 3)"),
        ),
        is_export: None,
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 3,
                        character: 5,
                    },
                    end: Position {
                        line: 3,
                        character: 6,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 3,
                        character: 5,
                    },
                    end: Position {
                        line: 3,
                        character: 6,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("Index 0 of `set(1, 2, 3)`"),
    },
)
