src/snapshots/zeek_language_server__ast__test__for_parameters_vec-4.snap
---
source: src/ast.rs
expression: "crate::ast::resolve(&db.0, NodeLocation::from_node(uri, ta))"
---
Some(
    Decl {
        module: None,
        id: u!("ta"),
        fqid: u!("ta"),
        kind: Index(
            Loop(
                0,
            ),
            u!("table([1]=\"a\", [2]=\"b\")"),
        ),
        is_export: None,
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 4,
                        character: 5,
                    },
                    end: Position {
                        line: 4,
                        character: 7,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 4,
                        character: 5,
                    },
                    end: Position {
                        line: 4,
                        character: 7,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("Index 0 of `table([1]=\"a\", [2]=\"b\")`"),
    },
)
