src/snapshots/zeek_language_server__ast__test__for_parameters_vec-5.snap
---
source: src/ast.rs
expression: "crate::ast::resolve(&db.0, NodeLocation::from_node(uri, tb))"
---
Some(
    Decl {
        module: None,
        id: u!("tb"),
        fqid: u!("tb"),
        kind: Index(
            Loop(
                1,
            ),
            u!("table([1]=\"a\", [2]=\"b\")"),
        ),
        is_export: None,
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 4,
                        character: 9,
                    },
                    end: Position {
                        line: 4,
                        character: 11,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 4,
                        character: 9,
                    },
                    end: Position {
                        line: 4,
                        character: 11,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("Index 1 of `table([1]=\"a\", [2]=\"b\")`"),
    },
)
