src/snapshots/zeek_language_server__ast__test__for_parameters_vec.snap
---
source: src/ast.rs
expression: "crate::ast::resolve(&db.0, NodeLocation::from_node(uri, i1))"
---
Some(
    Decl {
        module: None,
        id: u!("i"),
        fqid: u!("i"),
        kind: Index(
            Loop(
                0,
            ),
            u!("vector(1, 2, 3)"),
        ),
        is_export: None,
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 1,
                        character: 5,
                    },
                    end: Position {
                        line: 1,
                        character: 6,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 1,
                        character: 5,
                    },
                    end: Position {
                        line: 1,
                        character: 6,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("Index 0 of `vector(1, 2, 3)`"),
    },
)
