src/snapshots/zeek_language_server__ast__test__loaded_files.snap
---
source: src/ast.rs
expression: result
---
[
    "/tmp/foo.zeek",
    "/tmp/foo.zeek",
    "/tmp/p/p1/p1.zeek",
    "/p/p2/p2.zeek",
]
