src/snapshots/zeek_language_server__ast__test__loaded_files_recursive.snap
---
source: src/ast.rs
expression: result
---
[
    "/tmp/b.zeek",
    "/tmp/c.zeek",
    "/tmp/d.zeek",
]
