src/snapshots/zeek_language_server__ast__test__loop_vars_set.snap
---
source: src/ast.rs
expression: typ
---
Decl {
    module: Global,
    id: u!("string"),
    fqid: u!("string"),
    kind: Builtin(
        String,
    ),
    is_export: None,
    loc: None,
    documentation: u!("Builtin type 'string'"),
}
