src/snapshots/zeek_language_server__ast__test__loop_vars_set_iteration_order.snap
---
source: src/ast.rs
assertion_line: 1842
expression: typ
---
Decl {
    module: Global,
    id: "set[string, count]",
    fqid: "set[string, count]",
    kind: Builtin(
        Set(
            [
                String,
                Count,
            ],
        ),
    ),
    is_export: None,
    loc: None,
    documentation: "Builtin type 'set[string, count]'",
}
