src/snapshots/zeek_language_server__ast__test__loop_vars_set_multiple_types.snap
---
source: src/ast.rs
expression: typ
---
Decl {
    module: Global,
    id: "set[count, string, bool]",
    fqid: "set[count, string, bool]",
    kind: Builtin(
        Set(
            [
                Count,
                String,
                Bool,
            ],
        ),
    ),
    is_export: None,
    loc: None,
    documentation: "Builtin type 'set[count, string, bool]'",
}
