src/snapshots/zeek_language_server__ast__test__loop_vars_table-2.snap
---
source: src/ast.rs
expression: typ
---
Decl {
    module: Global,
    id: "count",
    fqid: "count",
    kind: Builtin(
        Count,
    ),
    is_export: None,
    loc: None,
    documentation: "Builtin type 'count'",
}
